RESOLVED FIXED74558
[chromium] DatabaseObserver needs threadsafe fixes and other clean-up.
https://bugs.webkit.org/show_bug.cgi?id=74558
Summary [chromium] DatabaseObserver needs threadsafe fixes and other clean-up.
David Levin
Reported 2011-12-14 16:32:33 PST
See summary.
Attachments
Patch (9.73 KB, patch)
2011-12-14 16:36 PST, David Levin
no flags
Patch for landing (10.03 KB, patch)
2011-12-14 19:41 PST, David Levin
no flags
Patch for landing (10.03 KB, patch)
2011-12-14 19:42 PST, David Levin
no flags
David Levin
Comment 1 2011-12-14 16:36:43 PST
Dmitry Titov
Comment 2 2011-12-14 18:27:14 PST
Comment on attachment 119324 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=119324&action=review > Source/WebKit/chromium/src/DatabaseObserver.cpp:90 > + m_workerLoaderProxy->postTaskForModeToWorkerContext( do we follow this style in WebKit or should it be in one long line? > LayoutTests/http/tests/workers/interrupt-database-sync-open-crash.html:8 > +var workers = new Array(30); why 30 workers and 10 iterations? Would be nice to add a comment on the number selection.
David Levin
Comment 3 2011-12-14 19:41:49 PST
Created attachment 119360 [details] Patch for landing
David Levin
Comment 4 2011-12-14 19:42:46 PST
Created attachment 119361 [details] Patch for landing
WebKit Review Bot
Comment 5 2011-12-14 22:51:37 PST
Comment on attachment 119361 [details] Patch for landing Clearing flags on attachment: 119361 Committed r102894: <http://trac.webkit.org/changeset/102894>
WebKit Review Bot
Comment 6 2011-12-14 22:51:41 PST
All reviewed patches have been landed. Closing bug.
Darin Adler
Comment 7 2011-12-18 22:18:22 PST
The test you landed with this patch is failing on Mac builds because there is no expected result. But when I put in an expected result, I get different results on different runs. It seems the output is nondeterministic. How is this supposed to work with the test machinery?
David Levin
Comment 8 2011-12-18 23:11:00 PST
(In reply to comment #7) > The test you landed with this patch is failing on Mac builds because there is no expected result. Yeah, I realized that after I landed it and then started to modify it. But I didn't realize it was causing a failure. > But when I put in an expected result, I get different results on different runs. It seems the output is nondeterministic. How is this supposed to work with the test machinery? I see. It is the exception. I should put in a handler for exceptions (since it isn't important) and causes the indeterminate output when it is unhandled.
David Levin
Comment 9 2011-12-18 23:12:48 PST
(In reply to comment #8) > (In reply to comment #7) > > The test you landed with this patch is failing on Mac builds because there is no expected result. > Yeah, I realized that after I landed it and then started to modify it. > > But I didn't realize it was causing a failure. > > > But when I put in an expected result, I get different results on different runs. It seems the output is nondeterministic. How is this supposed to work with the test machinery? > > I see. It is the exception. I should put in a handler for exceptions (since it isn't important) and causes the indeterminate output when it is unhandled. btw, I'm off tomorrow but I'm around on Tuesday. I'll see if I can fix this tomorrow night or on Tuesday. If you want a fix before then, feel free to roll out my fix and I'll land it all again with a result that is determinate. Sorry I can't handler it sooner.
David Levin
Comment 10 2011-12-21 00:05:44 PST
(In reply to comment #7) > The test you landed with this patch is failing on Mac builds because there is no expected result. But when I put in an expected result, I get different results on different runs. It seems the output is nondeterministic. How is this supposed to work with the test machinery? Skipped the test for now as I didn't figure out a quick fix (r103394).
Note You need to log in before you can comment on or make changes to this bug.