LayoutTests/http/tests/workers/resources/open-database-sync.js
@@ -1,0 +1,7 @@
+postMessage('started');
+
+onmessage = function(evt)
+{
+    if (evt.data == 'openDatabaseSync')
+        openDatabaseSync('', '', '', 1);
+}
